; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_asloptions.c_AslMergeOptionTokens.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_asloptions.c_AslMergeOptionTokens.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASL_TOKEN_SEPARATORS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @AslMergeOptionTokens to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AslMergeOptionTokens(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  store i8 0, i8* %6, align 1
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @ASL_TOKEN_SEPARATORS, align 4
  %9 = call i8* @strtok(i8* %7, i32 %8)
  store i8* %9, i8** %5, align 8
  br label %10

10:                                               ; preds = %13, %2
  %11 = load i8*, i8** %5, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %10
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @strcat(i8* %14, i8* %15)
  %17 = load i32, i32* @ASL_TOKEN_SEPARATORS, align 4
  %18 = call i8* @strtok(i8* null, i32 %17)
  store i8* %18, i8** %5, align 8
  br label %10

19:                                               ; preds = %10
  ret void
}

declare dso_local i8* @strtok(i8*, i32) #1

declare dso_local i32 @strcat(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
